# XiaokeAILabs

./: .gitignore  README.md  __init__.py  main.py  requirements.txt
datas/colbert/: colbert_compressor_bge_m3.pkl  test_colbertv1.py  test_colbertv2.py
datas/deepsearch_google/: .env.exmple  .gitignore  README.md  financial_search_prompt.py  google_search.py  main.py  requirements.txt  streamlit_app.py  生成式AI基建与算力投资趋势（2023-2026）_搜索报告.md
datas/layout_sorter/: layout_sorter.py  origin_layout_sorter_v1.py
datas/mixd_image_text/: data_process.py  main.py  markdown_image_enhancer.py
datas/pocketflow-deepsearch/: README.md  deepsearch_workflow.py  requirements.txt
datas/spacy_finetune/: check_cuda_version.py  eval_spacy_model.py  load_trained_model.py  requirements.txt  spacy_object_examples.py
datas/test_bfprt/: test_bfprt.ipynb
datas/test_bge_sparse/: test_flagembedding.py  test_transformers.py
datas/test_bge_vl/: model_mapping.txt  test_bge_vl.ipynb
datas/test_bm25_augmentation/: main.py
datas/test_colbert/: test_colbertv1.py  test_colbertv2.ipynb
datas/test_deepsearch/: deepsearch_design.md
datas/test_download_modelscope_model/: test_download_model.ipynb  test_llm.py
datas/test_dpo/: README.md  dpo.py  requirements.txt
datas/test_duckdb/: advance_duckdb_vss.ipynb  advance_duckdb_vss.md  duckdb.db.wal  (+9 more)
datas/test_rs_bfprt/: Cargo.toml
datas/test_rs_bfprt/benches/: selection_algorithms.rs
datas/test_rs_bfprt/src/: lib.rs  main.rs
utils/: __init__.py  find_dotenv_path.py
xiaoke_doc_assist/: README.md  requirements.txt  xiaoke_doc_assist.py
(+529 files in other folders)
